# Buildpp

./: .gitignore  README.md  TODO  pyproject.toml
buildpp/: __init__.py  __utils.py  _core.py  _executable.py  _globals.py  _library.py  _project.py  _version.py  buildpp.py  library.py  utils.py  versions.py
buildpp/langs/: __init__.py  __utils.py  _langs.py
buildpp/langs/cpp/: __init__.py  _compiler.py  _globals.py  _std_version.py  _toolchain.py
buildpp/test_utils/: test_GenericStringList.py  test_deDuplicateList.py  test_findDuplicates.py  utils.py
tests/core/Versions/: test_version.py
