[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buildpp"
version = "0.1.0"
description = "c++ (meta)build system totally based in Python"
authors = [
  {name = "Ashley Hsu", email = "ajkhsu22@gmail.com"},
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "pytest",
]
